# zutax-sdk-py

./: .env.example  .gitignore  CLAUDE.md  ERPNext_Integration_Guide.md  LICENSE  Makefile  README.md  erpnext_zutax_integrator.py  example_config_usage.py  example_validation.py  pyproject.toml  setup.bat  setup.sh  test_qr_simple.py
.github/workflows/: publish-github-packages.yml  publish-github-release.yml  publish-pypi.yml
erp__docs/: ERPNext_FIRS_EInvoicing_PRD.md  ERPNext_FIRS_Implementation_Roadmap.md  ERPNext_FIRS_Technical_Architecture.md
examples/: README.md  comprehensive_example.py  comprehensive_example_fixed.py  simple_invoice.py
firs_einvoice/: __init__.py  __version__.py
firs_einvoice/api/: __init__.py  client.py  invoice.py  resources.py
firs_einvoice/builders/: __init__.py  invoice_builder.py  line_item_builder.py
firs_einvoice/cache/: __init__.py  resource_cache.py
firs_einvoice/config/: __init__.py  constants.py  settings.py
firs_einvoice/crypto/: __init__.py  firs_qrcode.py  firs_signing.py  irn.py
firs_einvoice/managers/: __init__.py  hsn_manager.py  tax_manager.py
firs_einvoice/models/: __init__.py  base.py  enums.py  invoice.py  line_item.py  party.py  tax.py
firs_einvoice/processors/: __init__.py  invoice_processor.py
firs_einvoice/schemas/: __init__.py  input_schemas.py  response_schemas.py  validators.py
firs_einvoice/utils/: __init__.py  formatting.py
qr_output/: irn_test_results_20250818_001600.json  qr_data_QR-TEST-001.json
test-output/: invoice_COMP-2024-001.json  invoice_INV-2024-001.json
tests/: __init__.py  conftest.py  test_builders.py  test_client.py  test_enums.py  test_examples.py  test_irn_generation.py  test_models.py  test_qr_firs_compliance.py  test_qr_generation.py  test_qr_image_output.py  test_qr_simple.py  test_validation.py
zutax/: __init__.py  __version__.py  client.py
zutax/api/: __init__.py  client.py  invoice.py  resources.py
zutax/builders/: __init__.py  invoice_builder.py  line_item_builder.py
zutax/cache/: __init__.py  resource_cache.py
zutax/config/: __init__.py  constants.py  settings.py
zutax/crypto/: __init__.py  firs_qrcode.py  firs_signing.py  irn.py
zutax/managers/: __init__.py  hsn_manager.py  tax_manager.py
zutax/models/: __init__.py  base.py  enums.py  invoice.py  line_item.py  party.py  tax.py
zutax/processors/: __init__.py  invoice_processor.py
zutax/schemas/: __init__.py  input_schemas.py  response_schemas.py  validators.py  validators_impl.py
zutax/utils/: __init__.py  formatting.py
