[tool.poetry]
name = "zutax"
version = "1.2.0"
description = "Zutax (by Zulaiy) - Python SDK for Nigerian FIRS e-Invoicing with Pydantic validation"
authors = ["Zulaiy <opensource@zulaiy.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zulaiy/zutax-sdk-py"
repository = "https://github.com/zulaiy/zutax-sdk-py"
documentation = "https://github.com/zulaiy/zutax-sdk-py#readme"
keywords = ["zutax", "zulaiy", "firs", "einvoice", "nigeria", "tax", "invoice", "vat", "pydantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Accounting",
]
packages = [
    { include = "zutax" }
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.0"
pydantic-settings = "^2.0.0"
requests = "^2.31.0"
cryptography = "^41.0.0"
pycryptodome = "^3.19.0"
qrcode = {extras = ["pil"], version = "^7.4.0"}
python-dateutil = "^2.8.0"
cachetools = "^5.3.0"
email-validator = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"
pytest-asyncio = "^0.21.0"
responses = "^0.23.0"
faker = "^19.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.4.0"
isort = "^5.12.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.3.0"
sphinx-autodoc-typehints = "^1.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "asyncio: mark tests as async",
    "qr_unit: fast QR unit tests for QR output generation",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true